# pydantic-avro

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  codeql-analysis.yml  python-package.yml
src/pydantic_avro/: __init__.py  __main__.py  avro_to_graphql.py  avro_to_pydantic.py  base.py  helpers.py  type_handlers.py
src/pydantic_avro/from_avro/: avro_to_pydantic.py  class_registery.py  types.py
src/pydantic_avro/to_avro/: base.py  config.py  mapping.py  types.py
tests/: test_avro.py  test_from_avro.py  test_graphql_from_avro.py  test_helpers.py  test_main.py  test_public_api.py  test_to_avro.py
